# flexbench

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_comprehensive.py  test_device_types.py
.github/: CODEOWNERS
.github/workflows/: base.yml  check_pr.yml  merge.yml  pull_request.yml  test.yml
OpenMLPerf/: data.parquet  processor.py
OpenMLPerf-dataset/: README.md  data.json  data.parquet  process.py  processor.py  requirements.txt
OpenMLPerf-dataset/semi-raw-mlperf-data/4.0/: cmx-result-summary-keys.json
OpenMLPerf-dataset/semi-raw-mlperf-data/4.1/: cmx-result-summary.json
OpenMLPerf/semi-raw-mlperf-data/5.0/: cmx-result-summary.json
cli/: args.py  config.py  docker.py  main.py  utils.py
flexboard/: README.md  app.py  cost_calculator.py  predictor.py  recommender.py  requirements.txt  utils.py
legacy/flexboard.v0/: README.md
legacy/flexboard.v0/.streamlit/: config.toml
legacy/flexboard.v0/src/flexboard/: app.py
legacy/flexboard.v0/src/flexboard/core/: data_manager.py  models.py
scripts/: install_dependencies.sh  install_flexbench.sh  install_macos_server_dependencies.sh  install_server_dependencies.sh  install_server_python_dependencies.sh  install_server_vllm.sh  install_test_dependencies.sh  run_tests.sh
src/cli/: args.py  config.py  docker.py  main.py  utils.py
src/flexbench/: Dockerfile  README.md  SUT.py  __main__.py  accuracy_check.py  args.py  benchmark_runner.py  config.py  configs.py  main.py  pyproject.toml  user.conf  utils.py
src/flexbench/cli/: __init__.py  args.py  config.py  docker.py  main.py
src/flexbench/dataset/: base.py  factory.py  text.py  vision.py
src/flexbench/examples/: deepseek_text.sh  qwen_vision.sh
src/flexbench/runners/: base.py  factory.py
src/flexbench/runners/loadgen/: backend.py  runner.py
src/flexbench/runners/vllm/: backend.py  runner.py
src/flexbench/tests/: configs.py  server.py  test_benchmark.py
src/flexboard/: app.py  plots.py
src/flexboard-legacy/: requirements.txt
src/flexboard-legacy/src/flexboard/: api-test-ee.py  api.py
src/flexboard-legacy/src/flexboard/core/: state_manager.py
src/flexboard/pages/: 1_home.py  2_performance.py  3_cost.py
work/: README.md
work/isolated-gpu-runner/: README.md  gpu_worker.py
work/process-flexbench-results/: process.py
(+26 files in other folders)
