[project]
name = "FlexBench"
version = "0.1.0"
description = "FlexAI Universal Benchmarking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.9.0",
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "mlcommons-loadgen>=5.0.15",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "rouge-score>=0.1.2",
    "sentencepiece>=0.2.0",
    "transformers>=4.50.3",
]

[project.optional-dependencies]
local = [
    "vllm>=0.8.2",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pytest>=8.3.5"]
