[project]
name = "flexbench-cli"

version = "0.2.0"

description = "FlexBench CLI - Docker orchestration for FlexAI Universal Benchmarking"

readme = "README.md"

requires-python = ">=3.12"

authors = [
    {name = "Daniel Altunay"},
    {name = "Grigori Fursin"},
]

dependencies = [
    "pyyaml>=6.0.0",
    "aiohttp>=3.10.0",
]

license = "Apache-2.0"

classifiers = [
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
flexbench = "cli.main:main"

[project.optional-dependencies]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pytest>=8.3.5"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
